更新注解处理器

--- a/lobster-compiler/build.gradle
+++ b/lobster-compiler/build.gradle
@@ -2,7 +2,12 @@ apply plugin: 'java-library'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.auto.service:auto-service:1.0-rc6'
+    annotationProcessor "com.google.auto.service:auto-service:1.0-rc6"
+    implementation 'com.squareup:javapoet:1.11.1'
+    implementation files(org.gradle.internal.jvm.Jvm.current().toolsJar)
+    implementation project(path: ":lobster-annotation")
 }
 
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
